--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
 			<scope>provided</scope>
 		</dependency>
 
+
 		<!-- Import the JPA API, we use provided scope as the API is included in 
 			JBoss WildFly -->
 		<dependency>
@@ -118,6 +119,12 @@
 					<artifactId>slf4j-api</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.spec.javax.servlet</groupId>
+			<artifactId>jboss-servlet-api_3.1_spec</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- Import the JSF API, we use provided scope as the API is included in 
@@ -179,6 +186,7 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+
 
 	</dependencies>
 
