--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,13 @@
 			<version>5.3</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.primefaces.extensions</groupId>
+			<artifactId>all-themes</artifactId>
+			<version>1.0.8</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
