--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,10 +11,14 @@
 	
 	<filter-mapping>
 		<filter-name>SecurityFilter</filter-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>*.xhtml</url-pattern>
 	
 	</filter-mapping>
 	
+	<context-param>   
+     <param-name>primefaces.THEME</param-name>   
+     <param-value>cupertino</param-value>   
+   </context-param>  
 	
 	<context-param>
 		<param-name>facelets.SKIP_COMMENTS</param-name>
